fix alignment and space between left links and right links

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,5 +1,14 @@
 /* this is some magical font-importing.  
 you'll learn about it later. */
+
+/*
+### Self Check 
+- Everything is centered vertically inside the header. 
+- There is 8px space between everything and the edge of the header. 
+- Items are arranged horizontally as seen in the outcome image. 
+- There is 16px between each item on both sides of the header. 
+- flex is used to arrange everything.
+*/
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
 body {
@@ -12,6 +21,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -43,6 +56,22 @@ a {
   color: rebeccapurple;
 }
 
+.left-links {
+  display: flex;
+  align-items: center;
+}
+
+
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding: 0 16px;
+  margin: 0;
+}
+
+.right-links {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
